--- a/package.json
+++ b/package.json
@@ -1,28 +1,9 @@
 {
-  "name": "animalhouse",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "devStart": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ireneburri/AnimalHouse.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ireneburri/AnimalHouse/issues"
-  },
-  "homepage": "https://github.com/ireneburri/AnimalHouse#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
-    "mongoose": "^6.6.2"
-  },
-  "devDependencies": {
+    "mongoose": "^6.6.2",
     "dotenv": "^16.0.2",
     "nodemon": "^2.0.20"
   }
