--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jquery": "^3.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.2",
     "nodemon": "^2.0.20"
