--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
