--- a/package.json
+++ b/package.json
@@ -8,6 +8,26 @@
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
-  }
+    "nodemon": "^2.0.20",
+    "webpack": "^5.75.0",
+    "webpack.config.js": "^0.0.0"
+  },
+  "name": "animal",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ireneburri/AnimalHouse.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ireneburri/AnimalHouse/issues"
+  },
+  "homepage": "https://github.com/ireneburri/AnimalHouse#readme"
 }
