--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,8 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
+        "canvasjs": "^1.8.3",
+        "canvasjs-react-charts": "^1.0.5",
         "date-fns": "^2.29.3",
         "express": "^4.18.2",
         "framer-motion": "^7.5.4",
@@ -21,6 +23,7 @@
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.5.0",
+        "react-chartjs-2": "^5.1.0",
         "react-datepicker": "^4.8.0",
         "react-document-title": "^2.0.3",
         "react-dom": "^18.2.0",
@@ -54,5 +57,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "html-loader": "^4.2.0"
     }
 }
